fix stretching on carousel.

--- a/src/app/show-garden/show-garden.less
+++ b/src/app/show-garden/show-garden.less
@@ -79,7 +79,7 @@
 }*/
 .car-image{
 	height: 300px;
-	width: 100%;
+	width: auto;
 }
 
 .car-image img{
